--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,3 +16,6 @@ body.dark_theme {
   background: rgb(202, 195, 209);
   transition: all 500ms ease;
 }
+/* .Home_dark_theme{
+  background: rgb(67, 5, 5);
+} */
